# format-ipy-cells

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  pyproject.toml  readme.md  setup.cfg
.github/workflows/: ci.yml  test.yml
format_ipy_cells/: __init__.py  helpers.py  main.py
hooks/: format_cells.py  format_ipy_cells.py
tests/: __init__.py  test_format_cells.py  test_helpers.py  test_main.py
tests/fixtures/: clean_nb.py  raw_nb.py
