[metadata]
name = format-ipy-cells
version = 0.1.0
description = Format Cells in Interactive Python Notebooks.
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/janosh/format-ipy-cells
author = Janosh Riebesell
author_email = janosh.riebesell@gmail.com
license = MIT
license_file = license
keywords = interactive, python, jupyter, ipython, data-science, machine-learning, code-formatting
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    format-ipy-cells = hooks.format_cells:main

[tool:pytest]
testpaths = tests
# https://stackoverflow.com/a/50821160
addopts = -p no:warnings