[metadata]
name = format-ipy-cells
version = 0.1.7
description = Format Cells in Interactive Python Notebooks.
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/janosh/format-ipy-cells
author = Janosh Riebesell
author_email = janosh.riebesell@gmail.com
license = MIT
license_files = license
keywords = interactive, python, jupyter, ipython, data-science, machine-learning, code-formatting
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    format-ipy-cells = format_ipy_cells.main:main

# used during pip install .[test]
[options.extras_require]
test = pytest

[tool:pytest]
testpaths = tests
# https://stackoverflow.com/a/50821160
addopts = -p no:warnings

[flake8]
max-line-length = 88

# make isort play nicely with black's import formatting
[isort]
multi_line_output = 3
include_trailing_comma = True
lines_after_imports = 2

[mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
